<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/filterMediaImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/images" />

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/filterMediaVideos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/videos" />

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/filterMediaGifs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/gifs" />

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/filterMediaRaws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/raw_images" />

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/filterMediaSvgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/svgs" />

</androidx.appcompat.widget.LinearLayoutCompat>
