<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/groupingDialogRadioGrouping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/do_not_group_files" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioLastModified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_last_modified" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioDateTaken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_date_taken" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioFileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_file_type" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioExtension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_extension" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_folder" />

        </RadioGroup>

        <include layout="@layout/v_divider" />

        <RadioGroup
            android:id="@+id/groupingDialogRadioOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioAscending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/ascending" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/groupingDialogRadioDescending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/descending" />
        </RadioGroup>

        <include
            android:id="@+id/useForThisFolderDivider"
            layout="@layout/v_divider" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/groupingDialogUseForThisFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder" />

        <com.roy.commons.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:text="@string/grouping_and_sorting"
            android:textSize="@dimen/smaller_text_size" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
