<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resizeImageHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.roy.commons.views.MyTextView
        android:id="@+id/imageWidthLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/width" />

    <com.roy.commons.views.MyEditText
        android:id="@+id/image_width"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageWidthLabel"
        android:layout_marginBottom="@dimen/activity_margin"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/normal_text_size" />

    <com.roy.commons.views.MyTextView
        android:id="@+id/imageHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/imageWidthLabel"
        android:text="@string/height" />

    <com.roy.commons.views.MyEditText
        android:id="@+id/imageHeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageWidthLabel"
        android:layout_alignStart="@+id/imageHeightLabel"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/normal_text_size" />

    <com.roy.commons.views.MyAppCompatCheckbox
        android:id="@+id/keepAspectRatio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageHeight"
        android:layout_marginTop="@dimen/activity_margin"
        android:checked="true"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/keep_aspect_ratio" />

</RelativeLayout>
