<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changeViewTypeDialogScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/changeViewTypeDialogHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/changeViewTypeDialogRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/changeViewTypeDialogRadioGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/grid" />

            <com.roy.commons.views.MyCompatRadioButton
                android:id="@+id/changeViewTypeDialogRadioList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/list" />

        </RadioGroup>

        <include
            android:id="@+id/groupDirectSubFoldersDivider"
            layout="@layout/v_divider" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/changeViewTypeDialogGroupDirectSubfolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/group_direct_subfolders" />

        <com.roy.commons.views.MyAppCompatCheckbox
            android:id="@+id/changeViewTypeDialogUseForThisFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
